src/tests/snapshots/ast2ir__assign_to_expr.snap
---
created: "2019-04-01T03:53:50.345155400Z"
creator: insta@0.7.1
source: src/tests/ast2ir.rs
expression: "\n    e |= 0;\n    foo().x |= 1;\n"
---
_lhs = <global e>
_rhs = 0
_val = _lhs | _rhs
<global e> <- _val
<dead> = _val
_fun = <global foo>
_obj = _fun()
_prp = "x"
_lhs$1 = _obj[_prp]
_rhs$1 = 1
_val$1 = _lhs$1 | _rhs$1
_obj[_prp] <- _val$1
<dead> = _val$1
