src/tests/snapshots/ast2ir__conditional.snap
---
created: "2019-03-31T23:50:50.510671300Z"
creator: insta@0.7.1
source: src/tests/ast2ir.rs
expression: "\n    (cond ? true_ : false_);\n"
---
_tst = <global cond>
_udf = <void>
_val :- _udf
<if> _tst:
    _cns = <global true_>
    _val <- _cns
<else>:
    _alt = <global false_>
    _val <- _alt
<dead> = _val
