src/tests/snapshots/ast2ir__deep_scopes.snap
---
created: "2019-03-29T20:36:36.229280300Z"
creator: insta@0.7.1
source: src/tests/ast2ir.rs
expression: "\n    var x = 1;\n    (function() {\n        (function() {\n            x = 2;\n        });\n    });\n"
---
_ini = <void>
x :- _ini
_ini$1 = 1
x <- _ini$1
<dead> = <function>:
    <dead> = <function>:
        _val = 2
        x <- _val
        <dead> = _val
