src/tests/snapshots/ast2ir__for_in_initializer_order.snap
---
created: "2019-03-30T21:40:02.321785900Z"
creator: insta@0.7.1
source: src/tests/ast2ir.rs
expression: "\n    for (var x in b);\n"
---
_ini = <void>
x :- _ini
_rhs = <global b>
<foreach in> _rhs:
    _for = <argument 0>
    x <- _for
