src/tests/snapshots/ast2ir__labels.snap
---
created: "2019-04-01T04:51:58.473166800Z"
creator: insta@0.7.1
source: src/tests/ast2ir.rs
expression: "\n    outer: for (;;) {\n        inner: for (;;) {\n            if (foo) continue inner;\n            if (bar) break outer;\n        }\n    }\n"
---
<label outer>:
    <loop>:
        <label inner>:
            <loop>:
                _iff = <global foo>
                <if> _iff:
                    <continue inner>
                <else>:
                    <empty>
                _iff$1 = <global bar>
                <if> _iff$1:
                    <break outer>
                <else>:
                    <empty>
